<resources>
    <string name="app_name">Feline Adoption Agency</string>
    <string name="home">Home</string>
    <string name="cats">Cats</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="framentHome">Fragment home</string>
    <string name="fragmentCats">Fragment cats</string>
    <string name="nav_header_image_description">Image of small kitten</string>
    <string name="nav_login">Login</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Feedback</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="home_picture_image">Image of kittens</string>
    <string name="welcome">Our mission is to find caring homes for our cats and kittens. Sign-up to start the process.</string>
    <string name="featured_cat_description">Images of this month\'s featured cat</string>
    <string name="featured_cat_title">This month\'s featured cat:</string>

    <string name="distance">Search dist.(miles): %1$d</string>
    <string name="proximity_dialog_title">Choose value</string>
    <string name="choose_dialog_title">Choose a value</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="max_distance_text">Enter maximum search distance</string>

    <string name="inmate_image_description">Picture of one of the cats</string>
    <string name="delete_button_description">Delete cat button</string>
    <string name="default_cat_name">Cat clone</string>

    <!-- Arrays of values -->
    <string-array name="gender_array">
        <item>Any gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="age_range_array">
        <item>Any age</item>
        <item>Up to 1 year</item>
        <item>1 &#8211; 2 years</item>
        <item>2 &#8211; 5 years</item>
        <item>Over 5 years</item>
    </string-array>

    <string-array name="breed_array">
        <item>Any breed</item>
        <item>Abyssinian</item>
        <item>Balinese</item>
        <item>Bengal</item>
        <item>Birman</item>
        <item>British Shorthair</item>
        <item>Other</item>
    </string-array>

</resources>